--- a/MyHelloWorldProject/helloworld/build.gradle
+++ b/MyHelloWorldProject/helloworld/build.gradle
@@ -19,6 +19,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+	// Dependencies for MapStruct
+	implementation "org.mapstruct:mapstruct:1.3.0.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
