--- a/MyHelloWorldProject/helloworld/build.gradle
+++ b/MyHelloWorldProject/helloworld/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.6.RELEASE'
+	id 'org.springframework.boot' version '2.2.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
-	id 'war'
 }
 
 group = 'ch.course223'
@@ -14,17 +13,30 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Dependencies for security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// Dependencies for JWT
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
+
+	// Dependencies for REST-API
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Dependencies for databases, in this application PostgreSQL
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.postgresql:postgresql'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+	// Swagger
+	implementation "io.springfox:springfox-swagger2:2.9.2"
+	implementation "io.springfox:springfox-swagger-ui:2.9.2"
+	implementation "io.springfox:springfox-bean-validators:2.9.2"
 
 	// Dependencies for MapStruct
 	implementation "org.mapstruct:mapstruct:1.3.0.Final"
 	annotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
 
+	// Dependencies for testing purposes
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
