--- a/MyHelloWorldProject/helloworld/src/main/resources/application.properties
+++ b/MyHelloWorldProject/helloworld/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 
 hibernate.temp.use_jdbc_metadata_defaults=false
-spring.datasource.url=jdbc:postgresql://localhost:5432/helloworld
+spring.datasource.url=jdbc:postgresql://localhost:5432/myfirstdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
